2006-09-24 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGServerEvent.m: Use #if to disable old window exposure
	mechanism in favour of sending exposure events to the front end.
	Hopefully this will fix a bug where the old bypassing of the gui
	event queue could cause an attempt to copy from a region outside
	the image buffer.
	If there are no problems with this, we should remove the old, complex
	mechanism.

2006-09-13 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGServerWindow.m: use generic.wintypes.win_modal_atom
	for popup menu in gnome/ewmh window manager so that popup menus work
	in modal windows.  Reported as bug 17713 by Yen-Ju Chen.

2006-09-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/art/ARTContext.m:
	* Source/art/path.m:
	* Source/art/composite.m:
	* Source/art/shfill.m:
	* Source/art/image.m:
	* Source/xlib/XGGState.m:
	* Source/x11/XGServerWindow.m:
	* Source/x11/XGServerEvent.m:
	Get backend to generate NSEvent objects with event location given in
	OpenStep coordinates. Fix flushwindowrect coordinate handling.
	Update art backend to try to honor the x and y window offsets
	provided in the graphics state.

2006-09-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGServerWindow.m: ([_XFrameToOSFrame:for:]) fix transform
	error.

2006-09-08 Adam Fedor <fedor@gnu.org>

	Tools/gpbs.1: Add documentation on options (from Dennis Leeuw).

2006-09-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/x11/XGGeneric.h: New ivars to hold offsets for different
	window styles.
	* Source/x11/XGServerWindow.m: Offset handling and frame management
	routines rewritten to try to get it right more often.
	Fix long-standing bug positioning windows ... so initial positions
	of titled windows should not conflict with horizontal menu.
	* Source/x11/XGServerEvent.m: Rewritten code which handles reparenting
	notification so that we calculate the offsets of our window properly.
	NB. these fixups require corresponding fixups in the gui library.
