@@ -1,3 +1,15 @@
+2006-09-25 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Headers/x11/XGGeneric.h: Extra fielkd to flag when style offsets
+	are known.
+	* Source/x11/XGServerEvent.m: Add a lot more debug logging for
+	reparenting.  Ignore and log changes to 'known' style offsets.
+	* Source/x11/XGServerWindow.m: On startup we now check to see if
+	style offsets have been recorded in the root window, and if not
+	we briefly create a test window of each style to determine style
+	offsets, so we know what the offsets are for each style before
+	anything attempts to use them.
+
 2006-09-24 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/x11/XGServerEvent.m: Use #if to disable old window exposure
